# NNGraphix

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
frontend/: Cargo.toml  index.html
frontend/src/: board.rs  editor.rs  main.rs  tools.rs  utils.rs
frontend/src/board/: arrow.rs  block.rs  coords.rs  event.rs  graph.rs  grid.rs  message.rs  state.rs  vector.rs
frontend/src/board/block/: block_id.rs
frontend/src/editor/: board.rs  cursor.rs  event.rs  types.rs  viewbox.rs
frontend/src/editor/board/: arrow.rs  block.rs  event.rs  graph.rs  state.rs
frontend/src/editor/board/block/: event.rs  state.rs  vertex_data.rs
frontend/src/editor/board/graph/: basic.rs  iter.rs  vertex.rs  vertex_entry.rs
frontend/src/editor/board/state/: arrow_creation.rs  basic.rs  dragging_blocks.rs  internal.rs  predrag.rs  rectangle_selection.rs  states.rs
frontend/src/editor/board/state/arrow_creation/: finish.rs  preview.rs  start.rs
frontend/src/editor/viewbox/: basic.rs  common.rs  dragged.rs
frontend/src/tools/: id_generator.rs  viewable.rs
src-tauri/: Cargo.toml  Tauri.toml  tauri.conf.json
src-tauri/src/: main.rs
